<resources>
    <string name="app_name">Vince</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="open_nav">Open</string>
    <string name="close_nav">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_not_empty">Email não pode ser vazio!</string>
    <string name="password_not_empty">Senha não pode ser vazia!</string>
    <string name="invalid_user_or_password">Email ou senha inválidos!</string>
    <string name="name_not_empty">Nome não pode ser vazio!</string>
    <string name="email_has_been_registered">Email já foi cadastrado!</string>
    <string name="Password_had_more_than_6_characters">Senha deve ter mais de 6 caracteres!</string>
    <string name="error_when_registering">Erro ao cadastrar!</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="forgot_password">Esqueci a senha</string>
    <string name="or">Ou</string>
    <string name="dont_have_a_login_then_register">Não possui login? \nEntão Cadastre-se</string>
    <string name="go_register">Cadastre-se</string>
    <string name="name">Nome</string>
    <string name="register">Cadastrar</string>
    <string name="already_have_a_register_then_login">ja possui login? \nEntão faça Login</string>
    <string name="loading">Carregando…</string>
    <string name="home">Home</string>
    <string name="insights">Insights</string>
    <string name="cards">Cartões</string>
    <string name="goals">Metas</string>
    <string name="settings">Configurações</string>
    <string name="help">Ajuda</string>
    <string name="info">Info</string>
    <string name="logout">Sair</string>
    <string name="send_to_email">Enviado!</string>
    <string name="open_email_app">Abrir email</string>
    <string name="com_google_android_gm">com.google.android.gm</string>
    <string name="error_with_google">Erro ao fazer login com google!</string>
    <string name="value_cannot_be_empty">Valor não pode ser vazio!</string>
    <string name="title_cannot_be_empty">Título não pode ser vazio!</string>
    <string name="select_date">Selecionar data</string>
    <string name="date_cannot_be_empty">Data não pode ser vazia</string>
    <string name="delete_item">Delete Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="next">Next</string>
    <string name="fragmentIdentifier">fragmentIdentifier</string>
    <string name="show_expense">Ver Despesas</string>
    <string name="show_revenue">Ver Receitas</string>
    <string name="show_trasnfer">Ver Transferencias</string>
    <string name="number_not_empty">Numero não pode ser vazio!</string>
    <string name="receiver_not_empty">Destinatário não pode ser vazio!</string>
    <string name="value">Valor</string>
    <string-array name="categories">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="select">Selecionar</string>
    <string name="new_card">Novo Cartão</string>
    <string name="card_name">Nome do Cartão</string>
    <string name="enter_name">Digite o nome</string>
    <string name="card_number">Numero do Cartão</string>
    <string name="card_type">Tipo de Cartão</string>
    <string name="card_color">Cor do Cartão</string>
    <string name="save">Salvar</string>
    <string name="revenue">Receita</string>
    <string name="expense">Despesa</string>
    <string name="transfer">Transferência</string>
    <string name="link_in_email">Um link será enviado para seu email!</string>
    <string name="send">Enviar</string>
    <string name="back">Voltar</string>
    <string name="save_goal">Salvar Meta</string>
    <string name="goal_name">Nome da meta</string>
    <string name="saved_value">Valor guardado</string>
    <string name="coin">R$</string>
    <string name="objective_value">Valor objetivo</string>
    <string name="estimated_date">Data Estimada</string>
    <string name="not_registration">Não tenho cadastro</string>
    <string name="add_task">Adicionar tarefa</string>
    <string name="have_login">Possui Login?</string>
    <string name="theme">Tema</string>
    <string name="change_theme">Mudar tema   </string>
    <string name="change_dark_light">Muda o tema entre Claro/Escuro</string>
    <string name="danger_zone">Zona Perigosa</string>
    <string name="delete_all">Apagar tudo</string>
    <string name="clear_all_caution">Limpa todos os seus dados. MUITO CUIDADO!</string>
    <string name="version_1">Versão 1.0</string>
    <string name="type">Tipo</string>
    <string name="number">Numero</string>
    <string name="bradesco">Bradesco</string>
    <string name="pix">Pix</string>
    <string name="title_UPPER">TITULO</string>
    <string name="tag_UPPER">TAG</string>
    <string name="date_UPPER">DATA</string>
    <string name="value_UPPER">VALOR</string>
    <string name="add_card">Adicionar Cartão</string>
    <string name="title">Título</string>
    <string name="describe_title">Descreva o título</string>
    <string name="category">Categoria</string>
    <string name="date">Data</string>
    <string name="type_pay">Tipo de Pagamento</string>
    <string name="card">Cartão</string>
    <string name="receiver">Destinatário</string>
    <string name="credit">Crédito</string>
    <string name="debit">Débito</string>
    <string name="money">Dinheiro</string>
    <string name="no_records_saved">Nenhum registro salvo!</string>


    <!--Cores-->
    <string name="silver">Prata</string>
    <string name="black">Preto</string>
    <string name="gray">Cinza</string>
    <string name="brown">Marrom</string>
    <string name="red">Vermelho</string>
    <string name="fuchsia">Fúcsia</string>
    <string name="green">Verde</string>
    <string name="lime">Lima</string>
    <string name="olive">Oliva</string>
    <string name="yellow">Amarelo</string>
    <string name="marine">Marinho</string>
    <string name="blue">Azul</string>
    <string name="bluish_green">Verde-azulado</string>
    <string name="purple">Roxo</string>
    <string name="aqua">Aqua</string>
    <!--Cores-->

    <string name="saved_successfully">Salvo com sucesso!</string>
    <string name="select_a_type">Selecione um Tipo!</string>
    <string name="empty_name">Nome vazio!</string>
    <string name="empty_value">Valor vazio!</string>
    <string name="goal_greater_than_zero">Meta deve ser maior que zero!</string>
    <string name="value_greater_target">Valor maior que a meta!</string>
    <string name="cancel">Cancelar</string>
    <string name="yes">Sim</string>
    <string name="really_delete">Tem certeza que deseja excluir tudo? Isso não pode ser revertido.</string>
    <string name="success">Sucesso!</string>
    <string name="delete_card">Apagar Cartão</string>
    <string name="really_delete_card">Tem certeza que deseja excluir o cartão? Todos os registros com este cartão serão apagados!</string>
    <string name="delete_record">Remoção de Registro</string>
    <string name="really_delete_record">Tem certeza que deseja excluir o registro? Isso não pode ser revertido.</string>
    <string name="delete_goal">Apagar Meta</string>
    <string name="reallt_delete_goal">Tem certeza que deseja excluir a meta? Isso não pode ser revertido.</string>
    <string name="select_a_category">Selecione uma categoria!</string>
    <string name="choose_a_card">Escolha um cartão</string>
    <string name="view">Ver</string>
    <string name="transactions">Transações</string>

    <string name="categoria_alimentacao">Alimentação</string>
    <string name="categoria_moradia">Moradia</string>
    <string name="categoria_transporte">Transporte</string>
    <string name="categoria_lazer">Lazer</string>
    <string name="categoria_investimentos">Investimentos</string>
    <string name="categoria_compras">Compras</string>
    <string name="categoria_veiculo">Veículo</string>
    <string name="categoria_outro">Outro</string>
    <string name="categoria_saude">Saúde</string>
    <string name="billet">Boleto</string>
    <string name="enter_number">Digite o numero</string>
    <string name="no_card">Sem cartão</string>
    <string name="dont_have_cards">Você não possui cartões!</string>
    <string name="number_encryption">Numero salvo usando Criptografia</string>
</resources>