<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ShowIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--
        Implementar configurações
        <item android:id="@+id/item_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings"/>
        -->
        <item android:id="@+id/item_help"
            android:title="@string/help"
            android:icon="@drawable/ic_help"/>

        <item android:id="@+id/item_info"
            android:title="@string/info"
            android:icon="@drawable/ic_info"/>

        <item android:id="@+id/item_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"/>

    </group>

</menu>