<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".view.auth.LoginActivity">

    <ImageView
        android:id="@+id/image_vince"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_vince_clean"
        app:layout_constraintBottom_toTopOf="@+id/text_welcome_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_welcome_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edit_email_login_layout"
        app:layout_constraintEnd_toEndOf="@+id/image_vince"
        app:layout_constraintStart_toStartOf="@+id/image_vince"
        app:layout_constraintTop_toBottomOf="@+id/image_vince" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_email_login_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/edit_password_login_layout"
        app:layout_constraintEnd_toEndOf="@+id/text_welcome_login"
        app:layout_constraintStart_toStartOf="@+id/text_welcome_login"
        app:layout_constraintTop_toBottomOf="@id/text_welcome_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email_login"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_password_login_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/text_forgot_password"
        app:layout_constraintEnd_toEndOf="@+id/edit_email_login_layout"
        app:layout_constraintStart_toStartOf="@+id/edit_email_login_layout"
        app:layout_constraintTop_toBottomOf="@+id/edit_email_login_layout" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password_login"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawablePadding="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="4dp"
        android:text="@string/forgot_password"
        android:textColor="@color/seed"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/button_login"
        app:layout_constraintEnd_toEndOf="@+id/edit_password_login_layout"
        app:layout_constraintStart_toEndOf="@+id/button_login"
        app:layout_constraintTop_toBottomOf="@+id/edit_password_login_layout" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/text_or"
        app:layout_constraintEnd_toEndOf="@+id/google_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/google_button"
        app:layout_constraintTop_toBottomOf="@+id/text_forgot_password" />

    <TextView
        android:id="@+id/text_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        app:layout_constraintBottom_toTopOf="@id/google_button"
        app:layout_constraintEnd_toEndOf="@+id/button_login"
        app:layout_constraintStart_toStartOf="@+id/button_login"
        app:layout_constraintTop_toBottomOf="@id/button_login" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/text_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_or" />

    <TextView
        android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/dont_have_a_login_then_register"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/google_button" />


</androidx.constraintlayout.widget.ConstraintLayout>